
2019-03-15  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: drop yacc-compatibility warnings via AM_YFLAGS -Wno-yacc
	  as only bison is supported in any case

2019-03-14  Simon Sobisch <simonsobisch@gnu.org>

	* config.c: hand-merged change 2015-04-27 with an option to go back,
	  see COBC_STORES_CONFIG_VALUES

2019-03-11  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_info): changed msgid for "file handler" and
	  already output if RTD-version of VB-ISAM is used (even if this
	  wouldn't work currently), partially after Ron Norman

2019-03-10  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c: added RAISE statement as PENDING
	* parser.y: work on pending USE ON exception-name
	* parser.y, reserved.c, cobc.h, tree.h, typeck.c: added APPLY COMMIT clause
	  from 202x draft as PENDING (making I-O-CONTROL mandatory for its clauses)
	* typeck.c (cb_check_overlapping): do only the check, logic and messages
	  moved to (validate_move)
	* parser.y: minor refactoring

2019-03-09  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c: fixed freeing LOCAL-STORAGE memory using the wrong "free"
	* codegen.c (output_function_prototypes): use expected declaration
	  for EXTFH modules to possibly catch modules using different interface

2019-02-17  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: renamed build_nested_special -> build_words_for_nested_programs
	* parser.y: fixed bug #566 nested programs do not inherit class-names

2019-02-16  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c: fixed bug #567 missing error recovery in conditions

2019-02-09  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, tree.h, reserved.c: moved translation "word to system name" from
	  parser.y (mnemonic_name_clause) to reserved.c (get_system_name_translated)
	* tree.c (cb_list_map), tree.h: directly check for error node,
	  return 1 if found
	* typeck.c (cb_check_numeric_name, cb_check_numeric_edited_name): always